--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "@material-ui/core": "^3.9.2",
+    "gl-matrix": "^3.0.0",
     "meteor-node-stubs": "^0.4.1",
     "normalize-scss": "^7.0.1",
     "react": "^16.5.0",
