--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "@material-ui/core": "^3.9.2",
+    "bcrypt": "^3.0.5",
     "gl-matrix": "^3.0.0",
     "meteor-node-stubs": "^0.4.1",
     "normalize-scss": "^7.0.1",
@@ -18,6 +19,7 @@
     "react-dom": "^16.5.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-s-alert": "^1.4.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
