--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@material-ui/core": "^3.9.2",
     "bcrypt": "^3.0.5",
     "gl-matrix": "^3.0.0",
+    "leaflet": "^1.4.0",
     "meteor-node-stubs": "^0.4.1",
     "normalize-scss": "^7.0.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-leaflet": "^2.2.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-s-alert": "^1.4.1",
