--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-leaflet": "^2.2.1",
+    "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-s-alert": "^1.4.1",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "meteor": {
